# tsec-performance

./: .gitignore  CMakeLists.txt  README
data/: cisco_all.txt.data  cisco_all.txt_Argon2.out  cisco_all.txt_Argon2.out.eps  cisco_all.txt_SHA256.out  cisco_all.txt_SHA256.out.eps  obfuscate_perf.eps  small.txt  throughput_data.txt  tsec_perf_argon2.eps  tsec_perf_sha256.eps
output/: blacklist_unique.txt_Argon2.out  blacklist_unique.txt_SHA256.out
scripts/: obfuscate-overhead-plotter.py  obfuscate-runner.sh  optimizer.py  out_txt.eps  overhead.py  paths.sh  profiler.py  runner.sh  throughput-plotter.py  tmp.txt  tsec-overhead-plotter.py  tsec-runner.sh
src/: argon2.c  balloon.c  obfuscate.c  obfuscate_perf.c  optimizer.py  scrypt.c  sha256.c  single.c  tsec.c  tsec_perf.c
